# abyss-lounge-plugins

./: CMakeLists.txt  README.md
.github/workflows/: build-and-test.yaml
Black_Lounge/: App.js  BlackLounge.h  CMakeLists.txt  DeathMetalKnob.js  abyss.nam
cmake/: NAM.cmake  Pluginval.cmake  SINGULARITY.cmake
dsp/: CMakeLists.txt
dsp/amp/: Amp.cpp  Amp.h  CMakeLists.txt
dsp/fir/: CMakeLists.txt  ir.h
nam/: packed_best_submodel_1.ckpt
